# p7-nosql-mongodb-infra

./: .gitignore  Dockerfile  README.md  docker-compose.cluster.yml  docker-compose.replicaset.yml  docker-compose.sharding.yml  init-cluster.sh  init-sharding.sh  main.py  pyproject.toml
notebooks/: collection_analyse.ipynb  collection_etl.ipynb  collection_stats.ipynb
