[project]
name = "p7-nosql-mongodb-infra"
version = "0.1.0"
description = "Projet de creation d'une maquette d'une infrastructure complete mongodb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "missingno>=0.5.2",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]
